fixed font CSS overlaps

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   background-color: #0e3153;
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(8px + 2vmin);
   background-image: radial-gradient(circle, #123b64, #10375f, #0e3153);
   color: white;
 }
