--- a/src/components/about/ExperienceList/ExperienceList.css
+++ b/src/components/about/ExperienceList/ExperienceList.css
@@ -1,8 +1,3 @@
 .icon {
   margin-right: 10px;
 }
-
-.body {
-  color: white;
-  font-size: calc(10px + 2vmin);
-}
